# web-skeleton3

./: .gitignore  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
web_skeleton3/: __init__.py  main.py
web_skeleton3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web_skeleton3/assets/: README.txt
web_skeleton3/assets/logo/: genera_apple_icons.sh
web_skeleton3/code/: config.json  index.mako
web_skeleton3/code/app/: sample.js
web_skeleton3/code/scss-mixins/: README.txt
web_skeleton3/setup/: README.rst  watch.json  watch.sh  web-skeleton3.ini
