[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "web_skeleton3"
version = "0.1.0"  # Replace with the actual version from your package
description = "Static html code generator."
authors = [{name = "rmm", email = "rosa.martinez@artgins.com"}]
readme = "README.rst"  # Assuming README file is in the root of the project
license = {file = "LICENSE.txt"}  # Assuming you have a LICENSE file in the root of the project
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "rjsmin",
    "cssutils",
    "mako",
    "webassets",
    "delegator.py"
]

[project.urls]
Homepage = "https://github.com/artgins/web-skeleton3"

[project.scripts]
web-skeleton3 = "web_skeleton3.main:main"


